--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="dist/app.css">
   <title>Document</title>
 </head>
 <body>
-  <p>CIAOaaaa</p>
   <header>
+    <div class="nav"></div>
+    <div class="jumbo"></div>
   </header>
 
 </body>
