--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div class="nav"></div>
     <div class="jumbo"></div>
   </header>
+  <main>
+    <div class="top-main"></div>
+    <div class="feedback"></div>
+    <div class="surveys"></div>
+    <div class="reviews"></div>
+    <div class="praise"></div>
+    <div class="bottom-main"></div>
+  </main>
 
 </body>
 </html>
