--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="dist/app.css">
   <title>Document</title>
 </head>
 <body>
   <header>
-    <div class="nav"></div>
+    <div class="nav">
+      <div class="wrapper">
+        <div class="left"><img src="img/teambit-logo.png" alt=""></div>
+        <div class="rigth">
+          <ul>
+            <li><a href="#">Solutions <i class="fas fa-sort-down"></i></a></li>
+            <li><a href="#">Princing</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Sign in</a></li>
+          </ul>
+          <div class="button">Sign up</div>
+        </div>
+      </div>
+    </div>
     <div class="jumbo"></div>
   </header>
   <main>
