--- a/index.html
+++ b/index.html
@@ -97,7 +97,45 @@
 
   <!-- MAIN -->
   <main>
-    <div class="top-main"></div>
+    <div class="top-main">
+      <div class="wrapper">
+        <h2>Traditional people processes lead to disengagement<br>and turnover.</h2>
+        <div class="wrapper-center">
+          <div class="wrapper-center-left">
+            <img src="img/hardcore.png" alt="">
+            <p>They are hardcore,<br>formal and disconnected</p>
+          </div>
+          <div class="wrapper-center-middle">
+            <img src="img/nofeedback.png" alt="">
+            <p>They don't encourage <br>regular feedback</p>
+          </div>
+          <div class="wrapper-center-right">
+            <img src="img/notsafe.png" alt="">
+            <p>They don't make it<br>safe to speak up</p>
+          </div>
+        </div>
+        <img src="img/before.png" alt="">
+        <div class="mid-row"></div>
+      </div>
+      <div class="wrapper">
+        <h2>It doesn't have to be like that. Teambit is a modern<br>solution that teammates love.</h2>
+        <div class="wrapper-center">
+          <div class="wrapper-center-left">
+            <img src="img/lightweight.png" alt="">
+            <p>It's lightweight<br>fun and interconnected</p>
+          </div>
+          <div class="wrapper-center-middle">
+            <img src="img/feedbacksuggestions.png" alt="">
+            <p>It encourages regular<br>feedback with contextual requests</p>
+          </div>
+          <div class="wrapper-center-right">
+            <img class="safe" src="img/safe.png" alt="">
+            <p>It creates a safe<br>environment for dialog</p>
+          </div>
+        </div>
+        <img class="after-img" src="img/after.png" alt="">
+      </div>
+    </div>
     <div class="feedback"></div>
     <div class="surveys"></div>
     <div class="reviews"></div>
